fix the spacing issue

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -9,6 +9,8 @@
 *::after
 {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 
